--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
  <button onclick="populateTodos()">Populate Todos</button>
  <ol id="todo-list">
    <!-- LIs will go here -->
-   <li></li>
-   <li></li>
-   <li></li>
-   <li></li>
+   <li>User ID</li>
+   <li>ID</li>
+   <li>Title</li>
+   <li>Completed</li>
  </ol>
     
 </body>
